# csx

./: .gitignore  Makefile  Makefile.common  TODO.txt  csx  csx.geany  csx.sh  csx_test_arm.dump  dump.out  log  makefile  meson.build  notes.txt  perl.sed  sedit.sh  soc_core_ldst_arm.h  stash0.diff  test.c
archive/: New.c  a.out  csx_global.h  csx_nnd_flash.c  csx_omap_mmio.c  csx_test_arm_asm.c  csx_trace.h  perl.sed  soc_core_shifter.c  soc_mmio_omap.c  tfvm.c  thumb_dispatch_list.c
boot/: linker.ld  makefile
include/: alu_box.h  alubox.h  alubox_arm.h  alubox_arm_shift.h  alubox_flags.h  alubox_thumb.h  arm_cpsr.h  config.h  csx.h  csx_armvm_glue.h  csx_cache.h  csx_coprocessor.h  csx_core.h  csx_core_arm.h  csx_core_arm_decode.h  csx_core_arm_inst.h  csx_core_coprocessor.h  csx_core_decode.h  csx_core_disasm.h  csx_core_psr.h  csx_core_reg.h  csx_core_reg_trace.h  csx_data.h  (+113 more)
source/: config.c  csx.c  csx_cache.c  csx_coprocessor.c  csx_core.c  csx_core_arm.c  csx_core_barrel_shifter.c  csx_core_decode.c  csx_core_disasm.c  csx_core_psr.c  csx_core_reg.c  csx_core_thumb.c  csx_core_trace.c  csx_core_trace_arm.c  csx_counters.c  csx_data.c  csx_mem.c  csx_mmio.c  csx_mmio.c.x  csx_mmio_cfg.c  csx_mmio_dpll.c  csx_mmio_mpu.c  csx_mmio_mpu_gpio.c  csx_mmio_mpu_l1_ihr.c  csx_mmio_ocp.c  csx_mmio_os_timer.c  csx_mmio_timer.c  csx_mmio_watchdog.c  csx_mmu.c  csx_nnd_flash.c  csx_sdl.c  csx_sdram.c  csx_soc.c  csx_soc_brom.c  csx_soc_exception.c  csx_soc_sram.c  csx_statistics.c  csx_test.c  csx_test_arm.c  csx_test_arm_asm.c  (+62 more)
source/core/: New.c  csx_coprocessor.c  csx_core.c  csx_core_arm.c  csx_core_decode.c  csx_core_disasm.c  csx_core_psr.c  csx_core_reg.c  csx_core_thumb.c  csx_core_trace.c  csx_mmio.c  csx_mmu.c  meson.build  opcode.c
source/private/: soc_core_arm.c  soc_core_thumb.c  soc_data.c
source/soc/: csx_mmio.c  csx_mmio_cfg.c  csx_mmio_dpll.c  csx_mmio_gp_timer.c  csx_mmio_mpu.c  csx_mmio_mpu_gpio.c  csx_mmio_ocp.c  csx_mmio_os_timer.c  csx_mmio_timer.c  csx_mmio_watchdog.c  csx_mmu.c  csx_omap_mmio.c  meson.build
source/test/: csx_test_arm.c  csx_test_arm_inst.c  csx_test_thumb.c  csx_test_thumb_inst.c  csx_test_utility.c
(+82 files in other folders)
