csx_soc_sources = [
	'csx_mmio.c',
	'csx_mmio_cfg.c',
	'csx_mmio_dpll.c',
	'csx_mmio_mpu.c',
	'csx_mmio_mpu_gpio.c',
	'csx_mmio_ocp.c',
	'csx_mmio_os_timer.c',
	'csx_mmio_timer.c',
	'csx_mmio_watchdog.c',
	'csx_mmu.c',
	]

csx_lib_soc = shared_library(
	'_csx_soc',
	csx_soc_sources,
	include_directories: inc,
	)
